--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,6 +48,32 @@ html{
     box-shadow: inset 0 0 0 50px #3abaf5;
  }
 
+ .navbar{
+    margin-top: 0 ;
+    padding: 0;
+    text-align:right;
+    
+}
+
+.navbar a {
+ background-color: red;
+ box-shadow: 0 5px 0 darkred;
+ color: white;
+ padding: .5em .5em;
+ position: relative;
+ text-decoration: none;
+ text-transform: uppercase;
+}
+
+a:hover {
+ background-color: #ce0606;
+ cursor: pointer;
+}
+
+a:active {
+ box-shadow: none;
+ top: 5px;
+}
 
  .main-container {
      width: 100vw;
@@ -96,6 +122,7 @@ html{
      background-color:#f7aa86;
      color:aliceblue;
      border-radius: 40%;
+     cursor: pointer;
  }
 
  #previous, .btn{
@@ -114,12 +141,13 @@ html{
     border-radius: 40%;
 }
 
- #showResult{
-     background-color:gainsboro;
-     margin-top: 3rem;
-     padding: 3rem 4rem;
-     box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
- }
+#showResult{
+    background-color:rgb(248, 195, 135);
+    margin-top: 2rem;
+    padding: 2.4rem 2rem;
+    box-shadow: 0 1rem 1rem rgb(218, 128, 26);
+   
+}
 
  .resultArea{
      display: none;
@@ -132,3 +160,14 @@ html{
      max-width: 60vw;
      max-height: 80vh;
  }
+
+ #showResult h3 {
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+#showResult .btn{
+    margin-top: 1px;
+    background-color:rgb(9, 153, 4);
+    color: white;;
+}
